--- a/settings.ini
+++ b/settings.ini
@@ -1,20 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
-# For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
+lib_name = fastmtl
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
+user = bdsaglam
+description = Multi-task learning utilities for fastai
+keywords = deep learning, multi-task learning, fastai, pytorch
+author = Barış Deniz Sağlam
+author_email = bds
+copyright = Barış Deniz Sağlam
 branch = {branch}
 version = 0.0.1
-min_python = 3.6
+min_python = 3.7
 audience = Developers
 language = English
 # Set to True if you want to create a more fancy sidebar.json than the default
@@ -25,7 +22,8 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = fastai==2.6.3
+dev_requirements = nbdev>=1.0.22,<2 black flake8
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
@@ -37,27 +35,17 @@ status = 2
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 
 # Whether to look for library notebooks recursively in the `nbs_path` dir
-recursive = False
+recursive = True
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
 doc_host =  https://%(user)s.github.io
-#For Enterprise Git pages use:  
-#doc_host = https://pages.github.%(company_name)s.com.  
-
-
 doc_baseurl = /%(lib_name)s/
-# For Enterprise Github pages docs use:
-# doc_baseurl = /%(repo_name)s/%(lib_name)s/
 
 git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
 
 lib_path = %(lib_name)s
 title = %(lib_name)s
