--- a/settings.ini
+++ b/settings.ini
@@ -7,7 +7,7 @@ user = bdsaglam
 description = Multi-task learning utilities for fastai
 keywords = deep learning, multi-task learning, fastai, pytorch
 author = Barış Deniz Sağlam
-author_email = bds
+author_email = bdsaglam@gmail.com
 copyright = Barış Deniz Sağlam
 branch = {branch}
 version = 0.0.1
