--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,6 +31,9 @@ kramdown:
  hard_wrap: false
  syntax_highlighter: rouge
 
+default_badges:
+  colab: true
+
 collections:
   tooltips:
     output: false
@@ -64,3 +67,4 @@ plugins:
     
 remote_theme: fastai/nbdev-jekyll-theme
 baseurl: /fastmtl/
+twitter_username: bdsaglam
