--- a/settings.ini
+++ b/settings.ini
@@ -50,11 +50,12 @@ git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 lib_path = %(lib_name)s
 title = %(lib_name)s
 
+#Test flags: introduce here the test flags you want to use separated by |
+tst_flags = slow|cuda|multicuda
+
 #Optional advanced parameters
 #Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
 #monospace_docstrings = False
-#Test flags: introduce here the test flags you want to use separated by |
-#tst_flags = 
 #Cell spacing: if you want cell blocks in code separated by more than one new line
 #cell_spacing = 
 #Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
