do not pin fastai version

--- a/settings.ini
+++ b/settings.ini
@@ -22,7 +22,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = fastai==2.6.3
+requirements = fastai~=2.6.3
 dev_requirements = nbdev>=1.0.22,<2 black flake8
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
