--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ keywords = deep learning, multi-task learning, fastai, pytorch
 author = Barış Deniz Sağlam
 author_email = bdsaglam@gmail.com
 copyright = Barış Deniz Sağlam
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.7
 audience = Developers
