--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,6 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
 host = github
 lib_name = fastmtl
-
 user = bdsaglam
 description = Multi-task learning utilities for fastai
 keywords = deep learning, multi-task learning, fastai, pytorch
@@ -10,53 +8,22 @@ author = Barış Deniz Sağlam
 author_email = bdsaglam@gmail.com
 copyright = Barış Deniz Sağlam
 branch = master
-version = 0.0.1
+version = 1.0.0
 min_python = 3.7
 audience = Developers
 language = English
-# Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = True
-# Add licenses and see current list in `setup.py`
 license = apache2
-# From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
-
-# Optional. Same format as setuptools requirements
 requirements = fastai~=2.6.3
 dev_requirements = nbdev>=1.0.22,<2 black flake8
-# Optional. Same format as setuptools console_scripts
-# console_scripts = 
-# Optional. Same format as setuptools dependency-links
-# dep_links = 
-
-###
-# You probably won't need to change anything under here,
-#   unless you have some special requirements
-###
-
-# Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
 nbs_path = nbs
 doc_path = docs
-
-# Whether to look for library notebooks recursively in the `nbs_path` dir
 recursive = True
-
-# Anything shown as '%(...)s' is substituted with that setting automatically
-doc_host =  https://%(user)s.github.io
-doc_baseurl = /%(lib_name)s/
-
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-
-lib_path = %(lib_name)s
-title = %(lib_name)s
-
-#Test flags: introduce here the test flags you want to use separated by |
+doc_host = https://bdsaglam.github.io
+doc_baseurl = /fastmtl/
+git_url = https://github.com/bdsaglam/fastmtl/tree/master/
+lib_path = fastmtl
+title = fastmtl
 tst_flags = slow|cuda|multicuda
 
-#Optional advanced parameters
-#Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
-#Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
-#Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
-#jekyll_styles = note,warning,tip,important
