pin nbdev version

--- a/settings.ini
+++ b/settings.ini
@@ -16,7 +16,7 @@ custom_sidebar = True
 license = apache2
 status = 2
 requirements = fastai~=2.6.3
-dev_requirements = nbdev>=1.0.22,<2 black flake8
+dev_requirements = nbdev~=1.2.11 black flake8
 nbs_path = nbs
 doc_path = docs
 recursive = True
