upgrade fastai version

--- a/settings.ini
+++ b/settings.ini
@@ -8,14 +8,14 @@ author = Barış Deniz Sağlam
 author_email = bdsaglam@gmail.com
 copyright = Barış Deniz Sağlam
 branch = master
-version = 1.1.0
+version = 1.2.0
 min_python = 3.7
 audience = Developers
 language = English
 custom_sidebar = True
 license = apache2
 status = 2
-requirements = fastai~=2.6.3
+requirements = fastai>=2.7.11
 dev_requirements = nbdev~=1.2.11 black flake8
 nbs_path = nbs
 doc_path = docs
